--- a/index.html
+++ b/index.html
@@ -11,35 +11,36 @@
 
 <body>
 
-<div class="wrapper">
-    <div class="content-box">
-        <div class="typing-text">
-            <p></p>
-        </div>  
-        <div class="content">
-            <ul class="result-details">
-                <li class="time">
-                    <p>Time Left:</p>
-                    <span><b>60</b>s</span>
-                </li>
-                <li class="mistake">
-                    <p>Mistakes:</p>
-                    <span>0</span>
+    <div class="wrapper">
+        <input type="text" class="input-field">
+        <div class="content-box">
+            <div class="typing-text">
+                <p></p>
+            </div>
+            <div class="content">
+                <ul class="result-details">
+                    <li class="time">
+                        <p>Time Left:</p>
+                        <span><b>60</b>s</span>
+                    </li>
+                    <li class="mistake">
+                        <p>Mistakes:</p>
+                        <span>0</span>
 
-                </li>
-                <li class="wpm">
-                    <p>WPM:</p>
-                    <span>0</span>
-                </li>
-                <li class="cpm">
-                    <p>CPM:</p>
-                    <span>0</span>
-                </li>
-            </ul>
-            <button>Try Again</button>
+                    </li>
+                    <li class="wpm">
+                        <p>WPM:</p>
+                        <span>0</span>
+                    </li>
+                    <li class="cpm">
+                        <p>CPM:</p>
+                        <span>0</span>
+                    </li>
+                </ul>
+                <button>Try Again</button>
+            </div>
         </div>
     </div>
-</div>
 
     <script src="./script/index.js"></script>
 
