--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </div>
 
-    <script src="./script/index.js"></script>
+    <script src="./script/index.js" type="module"></script>
 
 </body>
 
